# MorseCommunication

./: .gitignore
Morse-Desktop/: README.md  el.github.morsedesktop.json  meson.build
Morse-Desktop/.flatpak-builder/cache/refs/heads/x86_64-el.github.morsedesktop.json/: init
Morse-Desktop/.flatpak-builder/checksums/: x86_64-el.github.morsedesktop.json
Morse-Desktop/data/: el.github.morsedesktop.appdata.xml.in  el.github.morsedesktop.desktop.in  el.github.morsedesktop.gschema.xml  meson.build
Morse-Desktop/data/icons/: meson.build
Morse-Desktop/po/: POTFILES  meson.build
Morse-Desktop/src/: main.c  meson.build  morse-desktop-application.c  morse-desktop-application.h  morse-desktop-window.c  morse-desktop-window.h  morse-desktop-window.ui  morse-desktop.gresource.xml
pico/: CMakeLists.txt
pico-schematics/pico-schematics/: #auto_saved_files#  pico-schematics.kicad_prl  pico-schematics.kicad_pro  pico-schematics.kicad_sch  ~pico-schematics.kicad_sch.lck
pico/src/: main.c  test.c
